--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,10 @@
 title: Isabel Blaskovich # your name (or website title) here
 logo: "/images/image1-2.jpeg?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
-  First description 
+ Hello, I'm Isabel Blaskovich a Game Artist and Illustrator.
+ I currently am attending Columbia College Chicago, and have done some C# programming work. 
   <br><br>
-  Second description 
+  I have a small collection of projects with my biggest being "Let's Make Pie!" and fun texted based adventure game! 
   <br><br>
   <a href="https://www.linkedin.com/in/example/">View My LinkedIn Profile</a> 
   
