--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,8 @@ description: > # your text below (remove <br> elements if you don't need line br
  Hello, I'm Isabel Blaskovich a Game Artist and Illustrator.
  I currently am attending Columbia College Chicago, and have done some C# programming work. 
   <br><br>
-  I have a small collection of projects with my biggest being "Let's Make Pie!" and fun texted based adventure game! 
+  I have a small collection of projects with my biggest being "Let's Make Pie!" a fun texted based adventure game! 
+  My current projects are organized by semester, and should be updated regularly. 
   <br><br>
   <a href="https://www.linkedin.com/in/example/">View My LinkedIn Profile</a> 
   
