--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ description: > # your text below (remove <br> elements if you don't need line br
   I have a small collection of projects with my biggest being "Let's Make Pie!" a fun texted based adventure game! 
   My current projects are organized by semester, and should be updated regularly. 
   <br><br>
-  <a href="https://www.linkedin.com/in/example/">View My LinkedIn Profile</a> 
+  <a href="https://www.linkedin.com/in/isabel-blaskovich-844136221/">View My LinkedIn Profile</a> 
   
 theme: jekyll-theme-minimal
 google_analytics: UA-000000-0 # your Google Analytics tracking ID here
